0.3.0:
Use XML feed now for data instead of screenscraping
Added allergen/food info

1.0:
Added UI
First public release on Google Play

1.0.1:
Wow stupid typo (Vegetarian was showed as Contains Pork)
Added legend

1.0.2:
Changed food info indicators, now rectangular bars

1.0.3:
Legend in VBL works (oops)
Updated legend
Can reorder location names in VBM!!!

1.0.4:
Selected item when reordering is bolded
Outline replaced by small dots
Small dots in menu in blank food indicators
Updated firsttime window (typo, spacing, scrolling)
SEARCH

1.0.5:
Can select search results
Small dots in VBL (oops)
Reorganized packages (added activites, fragments, adapters packages)

1.0.6:
Recent search suggestions
Store location order as a set instead of many prefs
Search results organized by date
v9: stupid crash, didn't update default locorder commit

1.0.7:
Update meal time bar on resume

1.0.7.1:
Applied stupid patch to fix malformed XML

1.0.8:
Fixed: VBL shows correct day

1.1.0:
Added widget support (only 1 widget)

1.1.1:
Long press context menu (share, copy, search)
Fixed widget buttons....

1.1.2
Bugfixes
Annoying "sauteed" bug fixed

1.2.0
Added non dining hall locations
Internally all times stored as longs (millis since epoch)